# descent

./: Cargo.toml  README.md
bench/: bench.out
descent/: Cargo.toml
descent/src/: expr.rs  lib.rs  model.rs
descent/src/expr/: dynam.rs  fixed.rs
descent_ipopt/: Cargo.toml
descent_ipopt/examples/: problem.rs  problem_macro.rs  simple.rs
descent_ipopt/src/: lib.rs  sparsity.rs
descent_macro/: Cargo.toml
descent_macro/descent_macro_test/: Cargo.toml
descent_macro/descent_macro_test/tests/: test.rs
descent_macro/src/: lib.rs
descent_tests/: Cargo.toml
descent_tests/tests/: test.rs
examples/: problem.rs  problem_macro.rs  simple.rs
src/: expr.rs  expression.rs  ipopt.rs  ipopt_model.rs  ipopt_model_expr.rs  lib.rs  model.rs  model_expr.rs
