[package]
name = "descent"
version = "0.1.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "Modelling and automatic diff for constrained optimisation"
keywords = ["optimisation", "autodiff", "modelling", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/pscott/descent"

[dependencies]
libc = "0.2"
fnv = "1.0"

[profile.release]
#debug = 2
