[package]
name = "descent"
version = "0.2.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "Modelling and automatic differentiation for constrained optimisation"
keywords = ["optimisation", "optimization", "constraint", "differentiation", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/pscott/descent"

[dependencies]
libc = "0.2"
fnv = "1.0"

[profile.release]
#debug = 2
