[package]
name = "descent"
version = "0.2.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "Modelling and automatic differentiation for constrained optimisation"
keywords = ["optimisation", "optimization", "constraint", "differentiation", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.com/pscott/descent"
edition = "2018"

[dependencies]
libc = "0.2"
fnv = "1.0"

[profile.release]
#debug = 2

[[example]]
name = "problem"
path = "examples/problem.rs"

[[example]]
name = "problem_macro"
path = "examples/problem_macro.rs"

[dependencies.descent_macro]
path = "./descent_macro"
