[package]
name = "descent_ipopt"
version = "0.3.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "IPOPT interface for descent"
keywords = ["optimisation", "optimization", "constraint", "differentiation", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.com/pscott/descent"
readme = "README.md"
edition = "2018"

[dependencies]
libc = "0.2"
fnv = "1.0"
descent = { version = "0.3", path = "../descent" }

[dev-dependencies]
descent_macro = { version = "0.3", path = "../descent_macro" }

[[example]]
name = "problem"
path = "examples/problem.rs"

[[example]]
name = "problem_macro"
path = "examples/problem_macro.rs"

