[package]
name = "descent_macro"
version = "0.1.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "Procedural macro for doing source-code differentiation"
keywords = ["optimisation", "optimization", "constraint", "differentiation", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.com/pscott/descent"
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
descent = { path = "../descent" }
