[package]
name = "descent_tests"
version = "0.5.0"
authors = ["Paul Scott <paul.m.sco@gmail.com>"]
description = "Descent integration tests"
keywords = ["optimisation", "optimization", "constraint", "differentiation", "ipopt"]
categories = ["science"]
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.com/pscott/descent"
readme = "README.md"
edition = "2018"

[dev-dependencies]
descent = { version = "0.5", path = "../descent" }
descent_macro = { version = "0.5", path = "../descent_macro" }
